error
cesar@linux-fmap:~/projects/ircbot2/IRCClient> make -f Makefile                            g++ -c -Wall src/Main.cpp -o src/Main.o
In file included from /usr/include/c++/7/fstream:42:0,
                 from src/Main.cpp:28:
/usr/include/c++/7/x86_64-suse-linux/bits/basic_file.h:94:14: error: expected unqualified-id before ‘;’ token
       close();
              ^
In file included from src/Main.cpp:28:0:
/usr/include/c++/7/fstream:324:14: error: expected unqualified-id before ‘;’ token
       close();
              ^
/usr/include/c++/7/fstream: In destructor ‘virtual std::basic_filebuf<_CharT, _Traits>::~basic_filebuf()’:
/usr/include/c++/7/fstream:239:22: error: expected unqualified-id before ‘;’ token
       { this->close(); }
                      ^
/usr/include/c++/7/fstream: At global scope:
/usr/include/c++/7/fstream:634:7: error: expected unqualified-id before ‘{’ token
       {
       ^
/usr/include/c++/7/fstream:840:7: error: expected unqualified-id before ‘{’ token
       {
       ^
/usr/include/c++/7/fstream:1042:7: error: expected unqualified-id before ‘{’ token
       {
       ^
In file included from /usr/include/c++/7/fstream:1081:0,
                 from src/Main.cpp:28:
/usr/include/c++/7/bits/fstream.tcc: In member function ‘std::basic_filebuf<_CharT, _Traits>& std::basic_filebuf<_CharT, _Traits>::operator=(std::basic_filebuf<_CharT, _Traits>&&)’:
/usr/include/c++/7/bits/fstream.tcc:126:20: error: expected unqualified-id before ‘;’ token
       this->close();
                    ^
/usr/include/c++/7/bits/fstream.tcc: In member function ‘std::basic_filebuf<_CharT, _Traits>::__filebuf_type* std::basic_filebuf<_CharT, _Traits>::open(const char*, std::ios_base::openmode)’:
/usr/include/c++/7/bits/fstream.tcc:202:16: error: expected unqualified-id before ‘;’ token
   this->close();
                ^
/usr/include/c++/7/bits/fstream.tcc: At global scope:
/usr/include/c++/7/bits/fstream.tcc:214:5: error: expected unqualified-id before ‘{’ token
     {
     ^
/usr/include/c++/7/bits/fstream.tcc:215:7: error: expected primary-expression before ‘if’
       if (!this->is_open())
       ^~
/usr/include/c++/7/bits/fstream.tcc:215:7: error: expected ‘}’ before ‘if’
/usr/include/c++/7/bits/fstream.tcc:219:7: error: expected unqualified-id before ‘{’ token
       {
       ^
/usr/include/c++/7/bits/fstream.tcc:251:7: error: expected unqualified-id before ‘if’
       if (!_M_file.close())
       ^~
/usr/include/c++/7/bits/fstream.tcc:254:7: error: expected unqualified-id before ‘if’
       if (__testfail)
       ^~
/usr/include/c++/7/bits/fstream.tcc:256:7: error: expected unqualified-id before ‘else’
       else
       ^~~~
/usr/include/c++/7/bits/fstream.tcc:261:5: error: ‘streamsize’ does not name a type; did you mean ‘strptime’?
     streamsize
     ^~~~~~~~~~
     strptime
/usr/include/c++/7/bits/fstream.tcc:287:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::int_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:287:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::int_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:446:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::int_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:446:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::int_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:505:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::int_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:505:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::int_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:571:18: error: expected initializer before ‘<’ token
     basic_filebuf<_CharT, _Traits>::
                  ^
/usr/include/c++/7/bits/fstream.tcc:633:5: error: ‘streamsize’ does not name a type; did you mean ‘strptime’?
     streamsize
     ^~~~~~~~~~
     strptime
/usr/include/c++/7/bits/fstream.tcc:721:5: error: ‘streamsize’ does not name a type; did you mean ‘strptime’?
     streamsize
     ^~~~~~~~~~
     strptime
/usr/include/c++/7/bits/fstream.tcc:769:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::__streambuf_type*
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:769:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::__streambuf_type*
                           ^
/usr/include/c++/7/bits/fstream.tcc:798:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::pos_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:798:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::pos_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:858:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::pos_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:858:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::pos_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:873:14: error: expected nested-name-specifier before ‘basic_filebuf’
     typename basic_filebuf<_CharT, _Traits>::pos_type
              ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:873:27: error: expected initializer before ‘<’ token
     typename basic_filebuf<_CharT, _Traits>::pos_type
                           ^
/usr/include/c++/7/bits/fstream.tcc:899:22: error: expected initializer before ‘<’ token
     int basic_filebuf<_CharT, _Traits>::
                      ^
/usr/include/c++/7/bits/fstream.tcc:918:18: error: expected initializer before ‘<’ token
     basic_filebuf<_CharT, _Traits>::
                  ^
/usr/include/c++/7/bits/fstream.tcc:979:18: error: expected initializer before ‘<’ token
     basic_filebuf<_CharT, _Traits>::
                  ^
/usr/include/c++/7/bits/fstream.tcc:996:18: error: expected initializer before ‘<’ token
     basic_filebuf<_CharT, _Traits>::
                  ^
/usr/include/c++/7/bits/fstream.tcc:1053:25: error: ‘basic_filebuf’ is not a class template
   extern template class basic_filebuf<char>;
                         ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1053:25: error: explicit instantiation of non-template type ‘basic_filebuf’
/usr/include/c++/7/bits/fstream.tcc:1054:25: error: ‘basic_ifstream’ is not a class template
   extern template class basic_ifstream<char>;
                         ^~~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1054:25: error: explicit instantiation of non-template type ‘basic_ifstream’
/usr/include/c++/7/bits/fstream.tcc:1055:25: error: ‘basic_ofstream’ is not a class template
   extern template class basic_ofstream<char>;
                         ^~~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1055:25: error: explicit instantiation of non-template type ‘basic_ofstream’
/usr/include/c++/7/bits/fstream.tcc:1056:25: error: ‘basic_fstream’ is not a class template
   extern template class basic_fstream<char>;
                         ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1056:25: error: explicit instantiation of non-template type ‘basic_fstream’
/usr/include/c++/7/bits/fstream.tcc:1059:25: error: ‘basic_filebuf’ is not a class template
   extern template class basic_filebuf<wchar_t>;
                         ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1059:25: error: explicit instantiation of non-template type ‘basic_filebuf’
/usr/include/c++/7/bits/fstream.tcc:1060:25: error: ‘basic_ifstream’ is not a class template
   extern template class basic_ifstream<wchar_t>;
                         ^~~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1060:25: error: explicit instantiation of non-template type ‘basic_ifstream’
/usr/include/c++/7/bits/fstream.tcc:1061:25: error: ‘basic_ofstream’ is not a class template
   extern template class basic_ofstream<wchar_t>;
                         ^~~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1061:25: error: explicit instantiation of non-template type ‘basic_ofstream’
/usr/include/c++/7/bits/fstream.tcc:1062:25: error: ‘basic_fstream’ is not a class template
   extern template class basic_fstream<wchar_t>;
                         ^~~~~~~~~~~~~
/usr/include/c++/7/bits/fstream.tcc:1062:25: error: explicit instantiation of non-template type ‘basic_fstream’
/usr/include/c++/7/bits/fstream.tcc:1067:1: error: expected declaration before ‘}’ token
 } // namespace std
 ^
Makefile:16: recipe for target 'src/Main.o' failed
make: *** [src/Main.o] Error 1
cesar@linux-fmap:~/projects/ircbot2/IRCClient> make -f Makefile 
g++ -c -Wall src/Main.cpp -o src/Main.o
src/Main.cpp:28:10: fatal error: ifstream: No such file or directory
 #include <ifstream>
          ^~~~~~~~~~
compilation terminated.
Makefile:16: recipe for target 'src/Main.o' failed
make: *** [src/Main.o] Error 1

